scenarios/uc25-node-resiliency/kustomize/hybrid-workload/resources/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: php-crud
spec:
  to:
    kind: Service
    name: php-crud
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
